# control_of_discrete_processes

part1/: algorithms.cpp  algorithms.hpp  main.cpp
part1/tests/: 5.txt  50.txt  7.txt  9.txt
part2/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  main.cpp  notatki.txt
part2/tests/: 10.txt  100.txt  11.txt  20.txt  200.txt  5.txt  50.txt  7.txt  9.txt  n10_p1-10.txt  n10_p10-20.txt  n20_p1-10.txt  n20_p10-20.txt  n20_p50-100.txt  n50_p1-10.txt  n50_p10-20.txt  n50_p50-100.txt
part3/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  main.cpp
part3/tests/: instance_1.txt  instance_10.txt  instance_2.txt  instance_3.txt  instance_4.txt  instance_5.txt  instance_6.txt  instance_7.txt  instance_8.txt  instance_9.txt
